# v0.25.0
- added more Get*() commands to download and install several useful tools; based on functions from the installr package with the downloaded files going into the user's MyBrailleR folder. Python 2.7 and the associated wxPython version are hard wired at present until the dynamic links can be established.
- altered MakeBatch() to accept both upper and lower case R in file extensions.
- added ThankYou() to create an email message from a very short template.
- added LURN() to open the Let's Use R Now manual in a browser. It will open the version for blind users by default.
- added vignette on getting started with WriteR.
- updated vignettes
- updated WriteR.pyw and WriteROptions files. to v0.160530.0
- added GetWriteR() to download executable version for Windows users. This currently comes from GitHub by default, but was originally tested on http://R-Resources.massey.ac.nz; this can be used again if the user sets the argument UseGitHub=FALSE but the zip file downloaded must be moved to the right folder and manually unzipped. The function is currently unavilable due to problems with the executable file itself.
- added experimental VI.ggplot() thanks to starter from Tony Hirst
- added vignette for testing VI.ggplot() via ggplot2::qplot() calls. (This is far from complete.)
- added use of magrittr package to gain  the benefits of the pipe operator


# v0.24.2
- CRAN check uncovered need to have dependency of R >= 3.2.0. 

# v0.24.1
- fixed issue with inappropriate use of tempdir() in conjunction with paste0() instead of the more correct file.path(). Direct request from Brian Ripley on behalf of CRAN.
- removed use of tempdir() entirely for saving BrailleROptions and WriteROptions. Users must pull the defaults from the package until such time as they accept use of a folder on their own system, or a local copy of the settings.
- altered option setting commands to ensure no access to files if not running in an interactive session.
- altered help files accordingly
