@@ -20,7 +20,7 @@ ViewOn()
 ViewOff()
 }
 \details{
-The function names should be fairly self explanatory. \code{GoBlind()} and \code{GoSighted()} control use of the \code{VI()} method  which provides extra infromation about graphical objects for the assistance of blind users; \code{ViewOn()} and \code{ViewOff()} are for the automatic opening of \code{HTML} pages created by \pkg{BrailleR} functions; and \code{LatexOn()} and \code{LatexOff()} control the production of tables into LaTeX via the \pkg{xtable} package.
+The function names should be fairly self explanatory. \code{GoBlind()} and \code{GoSighted()} control use of the \code{VI()} method  which provides extra information about graphical objects for the assistance of blind users; \code{ViewOn()} and \code{ViewOff()} are for the automatic opening of \code{HTML} pages created by \pkg{BrailleR} functions; and \code{LatexOn()} and \code{LatexOff()} control the production of tables into LaTeX via the \pkg{xtable} package.
 }
 \value{
 Nothing is returned. These functions are only used for their side effects.
