@@ -15,7 +15,7 @@ This function masks the function of the same name in the \pkg{graphics} package.
 \value{
 An object of class histogram as per the \code{hist()} function from the \pkg{graphics} package, with the addition of any calls to the main title or axis labels.}
 \references{
-Godfrey, A.J.R. (2013) \sQuote{Statistical Software from a Blind Person's Perspective: R is the Best, but we can make it better}, The R Journal 5(1), pp73-80.
+Godfrey, A.J.R. (2013) \sQuote{Statistical Software from a Blind Person's Perspective: R is the Best, but we can make it better}, The R Journal 5(1), pp73-79.
 }
 \author{
 A. Jonathan R. Godfrey
